src/c/dynamics.h

/**
 * @brief Plane coefficients satisfying `a*x + b*y + c*z + d = 0`.
 */
typedef struct
{
    /**
     * Coefficient of x in the plane equation.
    */
    double a;
    /**
     * Coefficient of y in the plane equation.
    */
    double b;
    /**
     * Coefficient of z in the plane equation.
    */
    double c;
    /**
     * Constant plane coefficient.
    */
    double d;
} c_plane;
/**
 * @brief A line represented by a point and direction vector.
 */
typedef struct
{
    /**
     * A point on the line.
    */
    double r0[3];
    /**
     * Line direction vector.
    */
    double v[3];
} c_line;
/**
 * @brief A Pluecker line represented by direction and moment vectors.
 */
typedef struct
{
    /**
     * Pluecker line direction coordinates.
    */
    double u[3];
    /**
     * Pluecker line moment coordinates.
    */
    double m[3];
} c_plucker_line;
/**
 * @}
 */

/**
 * @defgroup dynamics_geometry Geometry operations
 * @{
 */
/**
 * Extract a plane normal.
 * @param pln Plane.
 * @param nrm Output normal vector.
 */
void c_plane_normal(const c_plane* pln, double nrm[3]);
/**
 * Construct a plane through three points.
 * @param pt1 First point.
 * @param pt2 Second point.
 * @param pt3 Third point.
 * @param pln Output plane.
 */
void c_plane_from_3_points(const double pt1[3], const double pt2[3], 
    const double pt3[3], c_plane *pln);
/**
 * Construct a plane from a point and normal.
 * @param pt Point on plane.
 * @param nrm Plane normal.
 * @param pln Output plane.
 */
void c_plane_from_point_and_normal(const double pt[3], const double nrm[3],
    c_plane *pln);
/**
 * Fit a plane to point data.
 * @param n Point count.
 * @param pts Point matrix.
 * @param ldp Leading dimension of pts.
 * @param pln Output plane.
 */
void c_plane_from_points(int n, const double *pts, int ldp, c_plane *pln);
/**
 * Reverse a plane normal and its equation.
 * @param pln Plane updated in place.
 */
void c_flip_plane_normal(c_plane *pln);
/**
 * Construct a line through two points.
 * @param pt1 First point.
 * @param pt2 Second point.
 * @param ln Output line.
 */
void c_line_from_2_points(const double pt1[3], const double pt2[3], c_line *ln);
/**
 * Construct the intersection line of two planes.
 * @param p1 First plane.
 * @param p2 Second plane.
 * @param ln Output line.
 */
void c_line_from_2_planes(const c_plane *p1, const c_plane *p2, c_line *ln);
/**
 * Fit a line to point data.
 * @param n Point count.
 * @param pts Point matrix.
 * @param ldp Leading dimension of pts.
 * @param ln Output line.
 */
void c_line_from_points(int n, const double *pts, int ldp, c_line *ln);
/**
 * Evaluate a point on a line.
 * @param ln Line.
 * @param t Line parameter.
 * @param x Output position.
 */
void c_evaluate_line_position(const c_line *ln, double t, double x[3]);
/**
 * Test whether two vectors are parallel within a tolerance.
 * @param n Vector length.
 * @param x First vector.
 * @param y Second vector.
 * @param tol Angular or residual tolerance.
 * @return true when parallel.
 */
bool c_is_parallel_vectors(int n, const double *x, const double *y, double tol);
/**
 * Test whether two lines are parallel.
 * @param x First line.
 * @param y Second line.
 * @param tol Tolerance.
 * @return true when parallel.
 */
bool c_is_parallel_lines(const c_line *x, const c_line *y, double tol);
/**
 * Test whether two planes are parallel.
 * @param x First plane.
 * @param y Second plane.
 * @param tol Tolerance.
 * @return true when parallel.
 */
bool c_is_parallel_planes(const c_plane *x, const c_plane *y, double tol);
/**
 * Test whether a point lies on a plane.
 * @param pt Point.
 * @param pln Plane.
 * @param tol Tolerance.
 * @return true when on the plane.
 */
bool c_is_point_on_plane(const double pt[3], const c_plane *pln, double tol);
/**
 * Test whether a point lies on a line.
 * @param pt Point.
 * @param ln Line.
 * @param tol Tolerance.
 * @return true when on the line.
 */
bool c_is_point_on_line(const double pt[3], const c_line *ln, double tol);
/**
 * Find the parameter of the nearest point on a line.
 * @param pt Point.
 * @param ln Line.
 * @return Line parameter.
 */
double c_nearest_point_on_line(const double pt[3], const c_line *ln);
/**
 * Compute the distance from a point to a line.
 * @param pt Point.
 * @param ln Line.
 * @return Distance.
 */
double c_point_to_line_distance(const double pt[3], const c_line *ln);
/**
 * Compute the distance from a point to a plane.
 * @param pt Point.
 * @param pln Plane.
 * @return Distance.
 */
double c_point_to_plane_distance(const double pt[3], const c_plane *pln);
/**
 * Project a vector onto a plane.
 * @param x Input vector.
 * @param pln Plane.
 * @param px Output projection.
 */
void c_vector_plane_projection(const double x[3], const c_plane *pln, double px[3]);
/**
 * Project a point onto a plane.
 * @param pt Input point.
 * @param pln Plane.
 * @param ppt Output projected point.
 */
void c_point_plane_projection(const double pt[3], const c_plane *pln, double ppt[3]);
/**
 * Construct a Pluecker line through two points.
 * @param pt1 First point.
 * @param pt2 Second point.
 * @param ln Output Pluecker line.
 */
void c_plucker_line_from_2_points(const double pt1[3], const double pt2[3], 
    c_plucker_line *ln);
/**
 * Convert a line to Pluecker coordinates.
 * @param src Input line.
 * @param ln Output Pluecker line.
 */
void c_plucker_line_from_line(const c_line *src, c_plucker_line *ln);
/**
 * Construct a Pluecker line from two planes.
 * @param p1 First plane.
 * @param p2 Second plane.
 * @param ln Output line.
 */
void c_plucker_line_from_2_planes(const c_plane *p1, const c_plane *p2, 
    c_plucker_line *ln);
/**
 * Construct a Pluecker line from six coordinates.
 * @param x Six coordinates.
 * @param ln Output line.
 */
void c_plucker_line_from_array(const double x[6], c_plucker_line *ln);
/**
 * Apply a matrix to a Pluecker line.
 * @param n Matrix row count.
 * @param x Matrix.
 * @param ldx Leading dimension of x.
 * @param ln Pluecker line.
 * @param y Output vector.
 */
void c_plucker_line_mtx_mult(int n, const double *x, int ldx, 
    const c_plucker_line *ln, double *y);
/**
 * Convert a Pluecker line to six coordinates.
 * @param ln Input line.
 * @param x Output coordinates.
 */
void c_plucker_line_to_array(const c_plucker_line *ln, double x[6]);
/**
 * Compute the common normal of two lines.
 * @param ln1 First line.
 * @param ln2 Second line.
 * @param ln Output common normal.
 */
void c_line_common_normal(const c_line *ln1, const c_line *ln2, c_line *ln);
/**
 * Determine whether two lines intersect and return their parameters.
 * @param ln1 First line.
 * @param ln2 Second line.
 * @param intersect Output intersection flag.
 * @param t1 Output parameter on ln1.
 * @param t2 Output parameter on ln2.
 * @param tol Tolerance.
 */
void c_do_lines_intersect(const c_line *ln1, const c_line *ln2, bool *intersect,
    double *t1, double *t2, double tol);
/**
 * Construct a line from a point and direction.
 * @param pt Point.
 * @param v Direction vector.
 * @param ln Output line.
 */
void c_line_from_point_and_vector(const double pt[3], const double v[3],
    c_line *ln);